k8s/07-nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutrismart-service
  namespace: nutrismart
  labels:
    app: nutrismart-nextjs
spec:
  type: ClusterIP
  selector:
    app: nutrismart-nextjs
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
