k8s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nutrismart-ingress
  namespace: nutrismart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  ingressClassName: nginx
  rules:
    - host: nutrismart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nutrismart-service
                port:
                  number: 80
